# ai-memory-layer

./: .gitignore
backend/: Dockerfile.chromadb  config.py  context_builder.py  main.py  memory.py  memory.sqlite3  pyproject.toml  raw_events.py
backend/app/: main.py
backend/app/api/routes/: chat.py
backend/app/core/: config.py  constants.py
backend/app/repositories/: memory_repository.py
backend/app/schemas/: chat.py  memory.py
backend/app/services/: chat_service.py  graph_service.py  llm_service.py  memory_service.py  memory_tools.py
backend/app/storage/: raw_events.py
backend/app/utils/: context_builder.py  datetime.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/api/: chat.ts
frontend/src/components/: brand-mark.tsx  chat-composer.tsx  conversation.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/types/: chat.ts
frontend/src/utils/: stream.ts
