[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "sse-starlette>=3.4.4",
]
